[package]
name = "cost-model"
version = "0.1.0"
authors = ["Zac Burns <That3Percent@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#graphql-parser = "0.3.0"
graphql-parser = { path = "../graphql-parser" }
nom = "5.1.2"
num-bigint = "0.3.0"