[package]
name = "agora"
version = "0.1.0"
authors = ["Zac Burns <That3Percent@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cost-model = { path = "../lang" }
# num-bigint is behind so we can use num-format
num-bigint = "0.2.6"
fraction = { version = "0.6.3", features = ["with-bigint"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0"
tree-buf = "0.10.0"
rayon = "1.4.0"
rand = "0.8.5"
structopt = "0.3.14"
num-format = { version = "0.4.0", features = ["with-num-bigint"] }
anyhow = "1.0.33"
libflate = "2.0.0"
