[package]
name = "cost-model"
version = "0.1.0"
authors = ["Zac Burns <That3Percent@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
firestorm = "0.5"
fraction = { version = "0.15.2", features = ["with-bigint"] }
graphql = { git = "https://github.com/edgeandnode/toolshed", tag = "graphql-v0.2.0", default-features = false }
itertools = "0.13.0"
lazy_static = "1.4.0"
nom = "7.1.3"
num-bigint = "0.4.5"
num-traits = "0.2.12"
serde_json = "1.0"
