[package]
name = "cost-model-node-plugin"
version = "0.1.0"
authors = ["Zac Burns <That3Percent@gmail.com>"]
license = "MIT"
build = "src/build.rs"
edition = "2018"
exclude = ["/lib"]

[lib]
name = "node_plugin"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.10.0"

[dependencies]
neon = "0.10.0"
cost-model = { path = "../lang" }
