[package]
name = "cost-model"
version = "0.1.0"
authors = ["Zac Burns <That3Percent@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Include the consume_query API
graphql-parser = { git = "https://github.com/That3Percent/graphql-parser.git", rev = "d2225bd38d529e9d39d51bdf6dbf189bdf0923aa" }
# graphql-parser = "0.3.0"
nom = "5.1.2"
num-bigint = "0.2.6"
num-traits = "0.2.12"
fraction = { version="0.6.3", features=["with-bigint"] }
rental = "0.5.5"
serde = { version="1.0.116", features=["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
single = "1.0.0"
firestorm = "0.4"