[package]
name = "cost-model-node-plugin"
version = "0.1.0"
authors = ["Zac Burns <That3Percent@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "node_plugin"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
cost-model = { path = "../lang" }